# celeris

./: .athena-state.json  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: benchmark.py
docs/: ARCHITECTURE.md  IR_SPEC.md  ROADMAP.md
docs/plans/: 2026-05-26-celeris-jit-compiler.md  2026-05-26-loop-fusion.md  2026-05-27-affine-fusion.md  2026-05-27-prange.md  2026-05-27-tensor-2d.md
examples/: agent_loop.py  reduction.py  saxpy.py
src/celeris/: __init__.py  errors.py  ir.py  parser.py  passes.py  runtime.py  types.py  verifier.py
src/celeris/_native/: bindings.cpp  celeris_core.cpp  celeris_core.hpp
src/celeris/backends/: __init__.py  base.py  interpreter.py  kernels.py  llvm.py  sourcegen.py
tests/: conftest.py  test_backends_registry.py  test_benchmark_runs.py  test_ci_config.py  test_differential.py  test_docs_present.py  test_errors.py  test_examples_run.py  test_interpreter.py  test_ir_roundtrip.py  test_kernels.py  test_llvm.py  test_native_core.py  test_parser.py  test_passes.py  test_pybind.py  test_runtime.py  test_smoke.py  test_sourcegen.py  test_types.py  test_verifier.py
