[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "celeris"
version = "0.5.0"
description = "A readable, restricted re-implementation of the Numba architecture: a JIT compiler for a numeric subset of Python."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Ben Crooks" }]

[project.optional-dependencies]
llvm = ["llvmlite>=0.42"]
native = ["pybind11>=2.11"]
dev = ["pytest>=8", "numpy>=1.24", "ruff", "pyyaml"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# Defaults (E4/E7/E9/F) minus deliberate style choices:
#   E701/E702 - compact dispatch one-liners (`if op == "+": return ...`) are intentional
#   E741      - short math names (l, r, I) read naturally in codegen/lowering
ignore = ["E701", "E702", "E741"]

[tool.ruff.lint.per-file-ignores]
# Tests use importorskip-before-import (E402) and import fixtures/markers that
# may look unused (F401).
"tests/*" = ["E402", "F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "needs_clang: requires a clang++ compiler on PATH",
    "needs_llvmlite: requires the optional llvmlite package",
    "needs_native: requires the CMake-built celeris_native module",
]
